<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.usc.zsurani.grubmate.activity_and_fragment.CreatePostActivity"
    android:orientation="vertical"
    android:layout_margin="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Post Name: "
                android:textSize="18dp" />

            <EditText
                android:id="@+id/edit_post_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Post Description: "
                android:textSize="18dp" />

            <EditText
                android:id="@+id/edit_post_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Num Available Servings: "
                android:textSize="18dp" />

            <EditText
                android:id="@+id/edit_post_max_requests"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textSize="18dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Pickup Time Begin: "
                android:textSize="18dp" />

            <EditText
                android:id="@+id/edit_post_begin_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:textSize="18dp"
                android:hint="15:30:00"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Pickup Time End: "
                android:textSize="18dp" />

            <EditText
                android:id="@+id/edit_post_end_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:textSize="18dp"
                android:hint="17:30:00"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Pickup Location: "
                android:textSize="18dp" />

            <EditText
                android:id="@+id/edit_post_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton android:id="@+id/radio_homemade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Homemade" />
                <RadioButton android:id="@+id/radio_restaurant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Restaurant" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Categories: "
                android:textSize="18dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/american"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="American" />

                <CheckBox
                    android:id="@+id/mexican"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="Mexican" />

                <CheckBox
                    android:id="@+id/fastFood"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="Fast Food" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/burger"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="Burger" />

                <CheckBox
                    android:id="@+id/pizza"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="Pizza" />

                <CheckBox
                    android:id="@+id/asian"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="Asian" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/coffee"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="Coffee" />

                <CheckBox
                    android:id="@+id/italian"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="Italian" />

                <CheckBox
                    android:id="@+id/sandwich"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="Sandwich" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/sushi"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="Sushi" />

                <CheckBox
                    android:id="@+id/breakfast"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="Breakfast" />

                <CheckBox
                    android:id="@+id/dessert"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="Dessert" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/bakery"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="Bakery" />

                <CheckBox
                    android:id="@+id/boba"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="Boba" />

                <CheckBox
                    android:id="@+id/thai"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="Thai" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/indian"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="Indian" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tags: "
                android:textSize="18dp" />

            <EditText
                android:id="@+id/edit_post_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Separate by commas"
                android:textSize="18dp" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/viewImage"
                android:src = "@mipmap/ic_placeholder"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="select group"
                android:textSize="18sp"
                android:id="@+id/button_select_group"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_save_new_post"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="SAVE"
                    android:textSize="18sp"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/button_delete_post"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="DELETE"
                    android:layout_gravity="right"
                    android:textSize="18sp"
                    android:layout_weight="1"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>