<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.usc.zsurani.grubmate.activity_and_fragment.MyNotificationActivity"
    android:orientation="vertical"
    android:layout_margin="16dp">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/list_notifications"
        android:layout_above="@+id/button_add_notification"
        android:layout_margin="8dp">

    </ListView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_empty_notif"
        android:text="No Notifications Found"
        android:textSize="24sp"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create Notification"
        android:id="@id/button_add_notification"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp"/>

</RelativeLayout>
