<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".activity_and_fragment.MyGroupActivity"
    android:layout_margin="16dp">


    <!--<TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="My Groups"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_margin="8dp"
        android:id="@+id/textView"
        android:textColor="#2f2f2f" />-->

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@android:id/list"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/create_group">

    </ListView>

    <TextView android:id="@android:id/empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="No Groups Found"
        android:textSize="24sp"
        android:layout_above="@+id/create_group" />

    <Button
        android:id="@+id/create_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create Group"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"/>

</RelativeLayout>
