<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listText"
        android:text="placeholder"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:textColor="#ffffff"/>

</LinearLayout>
